--- a/index.html
+++ b/index.html
@@ -142,6 +142,12 @@
                                             <h2>300x250</h2>
                                         </div>
                                     </div>
+
+                                    <div class="cont-textos-lazyload">
+                                        <div class="texto-lazyload">
+                                            <h3><span class="nombre-lazyload"></span></h3>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="caja-doble"></div>
                             </div>
@@ -165,6 +171,12 @@
                                         <div class="textos-cajas">
                                             <h1>Caja 3</h1>
                                             <h2>300x250</h2>
+                                        </div>
+                                    </div>
+
+                                    <div class="cont-textos-lazyload">
+                                        <div class="texto-lazyload">
+                                            <h3><span class="nombre-lazyload"></h3>
                                         </div>
                                     </div>
                                 </div>
@@ -216,6 +228,12 @@
                                         <h2>950x300</h2>
                                     </div>
                                 </div>
+
+                                <div class="cont-textos-lazyload">
+                                    <div class="texto-lazyload">
+                                        <h3><span class="nombre-lazyload"></h3>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="cont-modulo-10">
@@ -240,6 +258,12 @@
                                                 <h2>300x600</h2>
                                             </div>
                                         </div>
+
+                                        <div class="cont-textos-lazyload">
+                                            <div class="texto-lazyload">
+                                                <h3><span class="nombre-lazyload"></h3>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -259,6 +283,12 @@
                                         <h2>950x300</h2>
                                     </div>
                                 </div>
+
+                                <div class="cont-textos-lazyload">
+                                    <div class="texto-lazyload">
+                                        <h3><span class="nombre-lazyload"></h3>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="cont-modulo-12">
@@ -274,6 +304,12 @@
                                             <div class="textos-cajas">
                                                 <h1>Caja 5</h1>
                                                 <h2>300x600</h2>
+                                            </div>
+                                        </div>
+
+                                        <div class="cont-textos-lazyload">
+                                            <div class="texto-lazyload">
+                                                <h3><span class="nombre-lazyload"></h3>
                                             </div>
                                         </div>
                                     </div>
@@ -310,6 +346,12 @@
                                                 <h2>300x600</h2>
                                             </div>
                                         </div>
+
+                                        <div class="cont-textos-lazyload">
+                                            <div class="texto-lazyload">
+                                                <h3><span class="nombre-lazyload"></h3>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -329,6 +371,12 @@
                                         <h2>950x300</h2>
                                     </div>
                                 </div>
+
+                                <div class="cont-textos-lazyload">
+                                    <div class="texto-lazyload">
+                                        <h3><span class="nombre-lazyload"></h3>
+                                    </div>
+                                </div>
                             </div>
 
                             <div class="cont-modulo-15">
@@ -344,6 +392,12 @@
                                             <div class="textos-cajas">
                                                 <h1>Caja 8</h1>
                                                 <h2>300x600</h2>
+                                            </div>
+                                        </div>
+
+                                        <div class="cont-textos-lazyload">
+                                            <div class="texto-lazyload">
+                                                <h3><span class="nombre-lazyload"></h3>
                                             </div>
                                         </div>
                                     </div>
