--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Rubik:wght@300;500;700&display=swap" rel="stylesheet">
+    <script src="sass/moove_caja0.js"></script>
 
     <title>Cotizador Agea</title>
 </head>
@@ -77,7 +78,7 @@
                                 </div>
 
                                 <div class="modulo-02-b">
-                                    <div class="caja-0">
+                                    <div id="CajaCero" class="caja-0">
                                         <div class="cont-textos-cajas">
                                             <div class="textos-cajas">
                                                 <h1>Caja 0</h1>
